add plausible analytics

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script defer data-domain="adarshkumar.io" src="https://plausible.adarshkumar.io/js/plausible.js"></script>
     <script src="https://kit.fontawesome.com/d2e84440cc.js" crossorigin="anonymous"></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
