--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/public/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script defer data-domain="akxcix.com" src="https://plausible.io/js/script.js"></script>
-    <title>Template</title>
+    <title>akxcix</title>
   </head>
   <body>
     <div id="root"></div>
